# claude-tail

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STREAM_DESERIALIZER_ANALYSIS.md  STREAM_DESERIALIZER_REVIEW.md  cassette.tape  flake.nix  lefthook.yml  ralph.sh
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: cd.yml  ci.yml
.tickets/: ct-10fv.md  ct-15jv.md  ct-3eyk.md  ct-5fww.md  ct-5vmd.md  ct-5z3c.md  ct-6gwn.md  ct-6qk4.md  ct-7hj2.md  ct-a9d4.md  ct-ad3b.md  ct-c0d0.md  ct-h9cq.md  ct-jfxa.md  ct-jsem.md  ct-kkil.md  ct-mep4.md  ct-owge.md  ct-pcrq.md  ct-r7by.md  ct-u8gi.md  ct-wy09.md  ct-x4mf.md  ct-xwz9.md  ct-y9t5.md  ct-ywkl.md  ct-z5pe.md  ct-zjwp.md  ct-zkha.md
benches/: parser.rs
src/: app.rs  lib.rs  main.rs  text_utils.rs
src/input/: handler.rs  mod.rs
src/logs/: buffer.rs  index.rs  mod.rs  parser.rs  parser_stream.rs  project.rs  types.rs  watcher.rs
src/themes/: mod.rs
src/themes/presets/: catppuccin-mocha.yaml  dracula.yaml  gruvbox-dark.yaml  tokyonight-storm.yaml
src/ui/: agent_list.rs  conversation.rs  layout.rs  mod.rs  project_list.rs  session_list.rs  styles.rs
tests/: property_tests.proptest-regressions  property_tests.rs  scrolling_tests.rs
