[package]
name = "claude-tail"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "8.2"
notify-debouncer-mini = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
anyhow = "1.0"
thiserror = "2.0"
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
